[gd_scene load_steps=26 format=3 uid="uid://eqiy6h1qfe24"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_y075x"]
[ext_resource type="PackedScene" uid="uid://co1s1kqhenx38" path="res://prefabs/platform_purple.tscn" id="3_qakuj"]
[ext_resource type="PackedScene" uid="uid://cx08oql6tnr76" path="res://prefabs/platform_blue.tscn" id="3_su4i6"]
[ext_resource type="PackedScene" uid="uid://xn3206utuilo" path="res://prefabs/platform_green.tscn" id="4_nsixm"]
[ext_resource type="PackedScene" uid="uid://b5mcynomme1lt" path="res://prefabs/platform_salmon.tscn" id="5_emopn"]
[ext_resource type="AudioStream" uid="uid://dcm46yxuchc05" path="res://assets/sounds/death/Blast.ogg" id="6_miv65"]
[ext_resource type="AudioStream" uid="uid://dbaj8338wfj06" path="res://assets/sounds/death/amogus.wav" id="6_qbd8m"]
[ext_resource type="PackedScene" uid="uid://c07h0yfrhghqn" path="res://prefabs/player.tscn" id="6_xrx8n"]
[ext_resource type="AudioStream" uid="uid://btibk2l60dw0b" path="res://assets/sounds/death/augh.wav" id="7_msdd2"]
[ext_resource type="AudioStream" uid="uid://cf1rasw6oqrh4" path="res://assets/sounds/death/bong.wav" id="8_2qjpy"]
[ext_resource type="Texture2D" uid="uid://bf8vcv4kmnlpw" path="res://assets/sprites/triangle.svg" id="8_oa06d"]
[ext_resource type="LabelSettings" uid="uid://c2pjduu8ismol" path="res://label.tres" id="8_vun1a"]
[ext_resource type="AudioStream" uid="uid://cm7awc787ywy" path="res://assets/sounds/death/boom.wav" id="9_lh2w4"]
[ext_resource type="AudioStream" uid="uid://dc5eeuemd2lf4" path="res://assets/sounds/death/boowomp.wav" id="10_1owvy"]
[ext_resource type="AudioStream" uid="uid://4057m32qvlfh" path="res://assets/sounds/death/bruh.wav" id="11_1inpe"]
[ext_resource type="AudioStream" uid="uid://bmciw45sv1w7f" path="res://assets/sounds/death/e.wav" id="12_jjxbg"]
[ext_resource type="AudioStream" uid="uid://cho04gtliqowa" path="res://assets/sounds/death/hehehehaw.wav" id="13_n46fb"]
[ext_resource type="AudioStream" uid="uid://bi0ym3iiv8dij" path="res://assets/sounds/death/minecraft_explosion.wav" id="14_uby21"]
[ext_resource type="AudioStream" uid="uid://ipp1o0k4heg6" path="res://assets/sounds/death/nerdhorn.wav" id="15_7qx40"]
[ext_resource type="AudioStream" uid="uid://byoq300tduh8d" path="res://assets/sounds/death/skeleton.wav" id="16_ycxql"]
[ext_resource type="FontFile" uid="uid://c7kdy7nw2cp83" path="res://assets/comic.ttf" id="18_k85kr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1dc1"]
size = Vector2(692, 20)

[sub_resource type="Gradient" id="Gradient_qh4tf"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.839216, 0.921569, 0.921569, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_axqvl"]
gradient = SubResource("Gradient_qh4tf")

[sub_resource type="LabelSettings" id="LabelSettings_vrdds"]
font = ExtResource("18_k85kr")
font_size = 256
outline_size = 32
outline_color = Color(0.592157, 0.611765, 0.878431, 1)
shadow_size = 32
shadow_color = Color(0.592157, 0.611765, 0.878431, 1)
shadow_offset = Vector2(16, 16)

[node name="Game" type="Node2D" node_paths=PackedStringArray("score_label", "death_container", "death_area", "highscore_label", "sound_player", "right_arrow", "left_arrow")]
script = ExtResource("1_y075x")
platform_scenes = Array[PackedScene]([ExtResource("3_qakuj"), ExtResource("3_su4i6"), ExtResource("4_nsixm"), ExtResource("5_emopn")])
death_sounds = Array[AudioStream]([ExtResource("6_miv65")])
death_sounds_cursed = Array[AudioStream]([ExtResource("6_qbd8m"), ExtResource("7_msdd2"), ExtResource("8_2qjpy"), ExtResource("9_lh2w4"), ExtResource("10_1owvy"), ExtResource("11_1inpe"), ExtResource("12_jjxbg"), ExtResource("13_n46fb"), ExtResource("14_uby21"), ExtResource("15_7qx40"), ExtResource("16_ycxql")])
score_label = NodePath("CanvasLayer/Score Container/Score Label")
death_container = NodePath("CanvasLayer/Death Container")
death_area = NodePath("Death")
highscore_label = NodePath("CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Highschore Label")
sound_player = NodePath("Sound Player")
right_arrow = NodePath("CanvasLayer/Right Arrow")
left_arrow = NodePath("CanvasLayer/Left Arrow")

[node name="Death" type="Area2D" parent="."]
position = Vector2(656, 2472)
scale = Vector2(2, 2)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
shape = SubResource("RectangleShape2D_x1dc1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(774, 993)
scale = Vector2(2, 2)
limit_left = 0
limit_right = 1296
limit_bottom = 2304
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_vertical_enabled = true
drag_top_margin = 0.1
editor_draw_limits = true

[node name="Player" parent="." instance=ExtResource("6_xrx8n")]
position = Vector2(774, 1094)
JUMP_VELOCITY = -5700.0

[node name="RemoteTransform2D" parent="Player/Marker2D" index="0"]
remote_path = NodePath("../../../Camera2D")

[node name="Platforms" type="Node" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(652.5, 1152.5)
scale = Vector2(21.9844, 38.1719)
texture = SubResource("GradientTexture2D_axqvl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score Container" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 178.0
grow_horizontal = 2

[node name="Score Label" type="Label" parent="CanvasLayer/Score Container"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_vrdds")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Death Container" type="CenterContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Death Container"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Death Container/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Death Container/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Death Label" type="Label" parent="CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "YOU DIED !111!1!11"
label_settings = ExtResource("8_vun1a")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Highest: "
label_settings = ExtResource("8_vun1a")

[node name="Highschore Label" type="Label" parent="CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"
label_settings = ExtResource("8_vun1a")

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 90

[node name="Menu Button" type="Button" parent="CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("18_k85kr")
theme_override_font_sizes/font_size = 128
text = "MENU"

[node name="Restart Button2" type="Button" parent="CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("18_k85kr")
theme_override_font_sizes/font_size = 128
text = "UNDIE"

[node name="Left Button" type="TouchScreenButton" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
position = Vector2(557, 2311)
rotation = 3.14159
scale = Vector2(4.89735, 3.94078)
texture_normal = ExtResource("8_oa06d")
action = "ui_left"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Right Button" type="TouchScreenButton" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
position = Vector2(1285, 2311)
rotation = 3.14159
scale = Vector2(4.89735, 3.94078)
texture_normal = ExtResource("8_oa06d")
action = "ui_right"
visibility_mode = 1

[node name="Right Arrow" type="TextureRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.607843)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 252.0
offset_top = 804.0
offset_right = 362.0
offset_bottom = 929.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture = ExtResource("8_oa06d")
stretch_mode = 2

[node name="Left Arrow" type="TextureRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.607843)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = 804.0
offset_right = -338.0
offset_bottom = 929.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture = ExtResource("8_oa06d")
stretch_mode = 4
flip_h = true

[node name="Platform" parent="." instance=ExtResource("3_qakuj")]
position = Vector2(824, 1819)

[node name="Platform2" parent="." instance=ExtResource("4_nsixm")]
position = Vector2(305, 1051)

[node name="Platform3" parent="." instance=ExtResource("4_nsixm")]
position = Vector2(1000, 285)

[node name="Sound Player" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="Death" to="." method="_on_death_body_entered"]
[connection signal="just_jumped" from="Player" to="." method="_on_player_just_jumped"]
[connection signal="pressed" from="CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer/Menu Button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer/Restart Button2" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Left Button" to="." method="_on_left_button_pressed"]
[connection signal="released" from="CanvasLayer/Left Button" to="." method="_on_left_button_released"]
[connection signal="pressed" from="CanvasLayer/Right Button" to="." method="_on_right_button_pressed"]
[connection signal="released" from="CanvasLayer/Right Button" to="." method="_on_right_button_released"]

[editable path="Player"]
